fix broken css on produk favorit

--- a/asset/css/app.css
+++ b/asset/css/app.css
@@ -72,10 +72,15 @@ input[type=number]::-webkit-outer-spin-button {
 .favorit .detail {
     display: inline-block;
     vertical-align: middle;
-    font-family: Muli-Regular;
+}
+
+.favorit .detail > div {
+    font-family: 'Muli';
     font-size: 11px;
     color: #230B05;
     letter-spacing: -0.34px;
+    line-height: 16px;
+    font-weight: 400;
 }
 
 .produk-favorit {
@@ -286,7 +291,7 @@ input[type=number]::-webkit-outer-spin-button {
     align-items: center;
 }
 
-.produk {
+.grid-container.produk {
     margin-top: 80px;
     margin-bottom: 80px;
 }
